<resources>
    <string name="app_name">FTAeTix</string>
    <string name="email">Email:</string>
    <string name="email_hint">johndoe@website.com</string>
    <string name="Password">password</string>
    <string name="add_button">Add</string>
    <string name="log_out_button">Log Out</string>
    <string name="maps_button">MAPS</string>
    <string name="tickets_button">TICKETS</string>
    <string name="credit_card_expiration_date_hint">MM/YY</string>
    <string name="email_password">Password:</string>
    <string name="payment_method">Add Payment Method</string>
    <string name="profile_button">PROFILE</string>
    <string name="credit_card_16_digit_number">Enter 16 digit number</string>
    <string name="credit_card_cvv">CVV</string>
    <string name="name_on_card">Name On Card</string>
    <string name="card_on_file">Card on file</string>
    <string name="credit_card_number">XXXX-XXXX-XXXX-1234</string>
    <string name="label">MM/YY</string>
    <string name="destination">Destination:</string>
    <string name="one_way_chip">One Way</string>
    <string name="weekly_chip">Weekly</string>
    <string name="monthly_chip">Monthly</string>
    <string name="purchase_tickets_tv">Purchase Tickets</string>
    <string name="destination_hint">i.e. Central Park</string>
    <string name="find_best_transit_routes">Find Best Transit Routes</string>
    <string name="app_logo">App logo</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOGIN</string>
    <string name="introduction">Purchase your metro card here</string>
    <string name="Title">NYCFTAeTIX</string>
    <string name="login_LoginScreenTitle">LOGIN</string>
    <string name="password_login_Title">PASSWORD:</string>
    <string name="email_Login_Title">EMAIL:</string>
    <string name="submit_button_logIn">SUBMIT</string>
    <string name="map_id">73684aebf771a010</string>
    <string name="active">ACTIVE</string>
    <string name="activate">ACTIVATE</string>
    <string name="unavailable">UNAVAILABLE</string>
    <string name="api_key" translatable="false">AIzaSyDWnEiYtshg-hHBlUcPR8S4aae6BTKoc3k</string>
    <string name="buy_button">BUY</string>
    <string name="negativeButton">No</string>
    <string name="available_after_purchase_tv">Tickets will become available after purchase.</string>
    <string name="ftalogo">FTALogo</string>
    <string name="tickets_tv">TICKETS</string>
    <string name="logo">Logo</string>
    <string name="confirm_password">CONFIRM PASSWORD:</string>
    <string name="reEnter_password">RE-ENTER PASSWORD</string>
    <string name="enter_password">ENTER PASSWORD</string>
    <string name="password">PASSWORD:</string>
    <string name="enter_email">ENTER EMAIL</string>
    <string name="emailTextView">EMAIL:</string>
    <string name="submitButton">SUBMIT</string>
    <string name="confirm_password_signUp">CONFIRM PASSWORD</string>
</resources>
