<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage">

    <Button
        android:id="@+id/Sign_up"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:onClick="signUp"
        android:text="@string/sign_up"
        android:textSize="30sp"
        app:backgroundTint="#0039A6"
        app:layout_constraintBottom_toTopOf="@+id/Log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo" />

    <Button
        android:id="@+id/Log_in"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:onClick="login"
        android:text="@string/log_in"
        android:textSize="30sp"
        app:backgroundTint="#0039A6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sign_up" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="162dp"
        android:layout_height="150dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/Sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NYCFTA_Email_textView"
        app:srcCompat="@drawable/fta_logo" />

    <TextView
        android:id="@+id/NYCFTA_Email_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textColor="#004FB1"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>