<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFFFF"
    tools:context=".Tickets">


    <Button
        android:id="@+id/monthly_active_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/unavailable"
        app:backgroundTint="#83868A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/monthly_textView"
        app:layout_constraintTop_toBottomOf="@+id/weekly_active_button" />

    <Button
        android:id="@+id/weekly_active_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/unavailable"
        app:backgroundTint="#83868A"
        app:layout_constraintBottom_toTopOf="@+id/monthly_active_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/weekly_textView"
        app:layout_constraintTop_toBottomOf="@+id/oneWay_active_button" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/maps_profile_tickets_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/profile_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FBFFFF"
            android:onClick="onProfile"
            android:text="@string/profile_button"
            android:textColor="#191717"
            app:chipBackgroundColor="#D3CFCF"
            app:chipSurfaceColor="#D3CFCF" />

        <com.google.android.material.chip.Chip
            android:id="@+id/map_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onMap"
            android:text="@string/maps_button"
            android:textColor="#191717"
            android:textSize="14sp"
            app:chipBackgroundColor="#D3CFCF"
            app:chipSurfaceColor="#D3CFCF" />

        <com.google.android.material.chip.Chip
            android:id="@+id/tickets_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onTickets"
            android:text="@string/tickets_button"
            android:textColor="#191717"
            android:textSize="14sp"
            app:chipBackgroundColor="#D3CFCF"
            app:chipSurfaceColor="#D3CFCF" />

    </com.google.android.material.chip.ChipGroup>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/ftalogo"
        app:layout_constraintEnd_toStartOf="@+id/maps_profile_tickets_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fta_logo" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/ticket_option_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipSpacingHorizontal="60dp"
        app:layout_constraintBottom_toTopOf="@+id/availableTicketsTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchase_tickets_tv"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/one_way_ticket_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onOneWayTickets"
            android:text="@string/one_way_chip"
            android:textColor="#FFFFFF" />

        <com.google.android.material.chip.Chip
            android:id="@+id/weekly_ticket_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onWeeklyTickets"
            android:text="@string/weekly_chip"
            android:textColor="#FFFFFF" />

        <com.google.android.material.chip.Chip
            android:id="@+id/monthly_ticket_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onMonthlyTickets"
            android:text="@string/monthly_chip"
            android:textColor="#FFFFFF" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/purchase_tickets_tv"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:background="#004FB1"
        android:gravity="center_horizontal"
        android:text="@string/purchase_tickets_tv"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/weekly_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weekly_chip"
        android:textColor="@android:color/tertiary_text_dark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/weekly_active_button"
        app:layout_constraintEnd_toStartOf="@+id/weekly_active_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/oneWay_active_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/unavailable"
        app:backgroundTint="#83868A"
        app:layout_constraintBottom_toTopOf="@+id/weekly_active_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/one_way_textView"
        app:layout_constraintTop_toBottomOf="@+id/availableTicketsTV" />

    <TextView
        android:id="@+id/one_way_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_way_chip"
        android:textColor="@android:color/tertiary_text_dark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/oneWay_active_button"
        app:layout_constraintEnd_toStartOf="@+id/oneWay_active_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/availableTicketsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_after_purchase_tv"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/oneWay_active_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticket_option_chip" />

    <TextView
        android:id="@+id/monthly_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly_chip"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/monthly_active_button"
        app:layout_constraintEnd_toStartOf="@+id/monthly_active_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>